--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<h1>Animations Example</h1>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>CSS Animations<title>
+</head>
+<body>
+  <h1>Animations Example</h1>
+</body>
+</html>
