Fix issue with title closing tag

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>CSS Animations<title>
+  <title>CSS Animations</title>
 </head>
 <body>
   <h1>Animations Example</h1>
